force-app/main/default/objects/Application_Branching_Question__c/Application_Branching_Question__c.object-meta.xml
<CustomObject>
    <description>This object will be used to direct an applicant to the correct question based on the answer they have given on specific branching questions.</description>
    <label>Application Branching Question</label>
    <nameField>
        <displayFormat>ABQ-{000000}</displayFormat>
        <label>Application Branching Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Branching Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>