force-app/main/default/objects/Application_Branching_Question__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>This is the value it must match to, to choose this template. Note, this could be a semi colon separated list, so if more than one answer should follow the same track, you do not need to create multiple different AWT.</description>
    <inlineHelpText>This is the value it must match to, to choose this template. Note, this could be a semi colon separated list, so if more than one answer should follow the same track, you do not need to create multiple different AWT.</inlineHelpText>
    <label>Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>