force-app/main/default/objects/Application_Branching_Question__c/fields/Application_Question__c.field-meta.xml
<CustomField>
    <fullName>Application_Question__c</fullName>
    <description>This is the question that is the branching question. Note, the related question MUST have "Is Branching Question" equal to true, to allow this record to be created.</description>
    <inlineHelpText>This is the question that is the branching question. Note, the related question MUST have "Is Branching Question" equal to true, to allow this record to be created.</inlineHelpText>
    <label>Application Question</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Related question must be a branching question.</errorMessage>
        <filterItems>
            <field>Application_Question__c.Is_Branching_Question__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Application_Question__c</referenceTo>
    <relationshipLabel>Application Branching Questions</relationshipLabel>
    <relationshipName>Application_Branching_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>