force-app/main/default/objects/Application_Branching_Question__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>This is the template that the branching question relates to.</description>
    <inlineHelpText>This is the template that the branching question relates to.</inlineHelpText>
    <label>Template</label>
    <referenceTo>Application_Window_Template__c</referenceTo>
    <relationshipLabel>Application Branching Questions</relationshipLabel>
    <relationshipName>Application_Branching_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>