force-app/main/default/objects/Application_Branching_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application_Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>